--- a/templates/budgets/budgetitem_detail.html
+++ b/templates/budgets/budgetitem_detail.html
@@ -1,37 +1,43 @@
 {% extends "_base.html" %}
 
-{% block body_heading %}
-    {{budget_item.category}} - {{budget_item.monthly_budget.date|date:"F-Y"}}
-{% endblock body_heading %}
+{% block header %}
+    <h1 class="page-title">{{budget_item.category}} - {{budget_item.monthly_budget.date|date:"F-Y"}}</h1>
+{% endblock header %}
+
 {% block body %}
 
 <ul>
     <li>Amount: {{budget_item.amount}}</li>
 </ul>
 
-<div class="purchase-horizontal-grid">
-    <div>Date</div>
-    <div>Item</div>
-    <div>Amount</div>
-    <div>Source</div>
-    <div>Location</div>
-    <div>Category</div>
-    <div>Edit</div>
-    <div>Delete</div>
-</div>
-{% for purchase in purchases %}
 
-<div class="purchase-horizontal-grid">
-    <div>{{purchase.date}}</div>
-    <div>{{purchase.item}}</div>
-    <div>{{purchase.amount}}</div>
-    <div>{{purchase.source}}</div>
-    <div>{{purchase.location}}</div>
-    <div>{{purchase.category}}</div>
-    <div><a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'>Edit</a></div>
-    <div><a href='{% url "purchase_delete" pk=purchase.id %}'>Delete</a></div>
-</div>
+<div class="card-base">
+    <h2>Purchases</h2>
+    <div class="purchase-horizontal-grid card-table-header">
+        <div class="card-table-heading">Date</div>
+        <div class="card-table-heading">Item</div>
+        <div class="card-table-heading">Amount</div>
+        <div class="card-table-heading">Source</div>
+        <div class="card-table-heading">Location</div>
+        <div class="card-table-heading">Category</div>
+        <div class="card-table-heading">Edit</div>
+        <div class="card-table-heading">Delete</div>
+    </div>
+    {% for purchase in purchases %}
 
-{% endfor %}
+    <div class="purchase-horizontal-grid">
+        <div>{{purchase.date}}</div>
+        <div>{{purchase.item}}</div>
+        <div>${{purchase.amount}}</div>
+        <div>{{purchase.source}}</div>
+        <div>{{purchase.location}}</div>
+        <div>{{purchase.category}}</div>
+        <div><a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'>Edit</a></div>
+        <div><a href='{% url "purchase_delete" pk=purchase.id %}?next={{request.path|urlencode}}'>Delete</a></div>
+    </div>
+
+    {% endfor %}
+
+</div>
 
 {% endblock body %}
