--- a/templates/budgets/yearly_budget_detail.html
+++ b/templates/budgets/yearly_budget_detail.html
@@ -31,47 +31,95 @@
             <div class="card-header-action"><a href='{% url "budgetitem_create" year=yearly_budget.date.year %}'> + Add budget item</a>
             </div>
         </div>
-        
-        <div class="budget-horizontal-grid-monthly card-table-header">
-            <div class="card-table-heading">Category</div>
-            <div class="card-table-heading">Budgeted</div>
-            <div class="card-table-heading">Spent</div>
-            <div class="card-table-heading">Remaining</div>
-            <div></div>
+        <div class="card-main">
+            <div>
+                <div class="budget-horizontal-grid-monthly card-table-header">
+                    <div class="card-table-heading">Category</div>
+                    <div class="card-table-heading">Budgeted</div>
+                    <div class="card-table-heading">Spent</div>
+                    <div class="card-table-heading">Remaining</div>
+                    <div></div>
+                </div>
+
+                <div class="budget-horizontal-grid-monthly">
+                    {% for budget_item in budget_items%}
+                    <!-- <div data-tooltip="{{budget_item.category__name}}"><a href='{% url "yearly_budget_item_detail" year=yearly_budget.date.year category=budget_item.category__name %}'>{{budget_item.category__name}}</a></div> -->
+                    <div><a href='{% url "yearly_budget_item_detail" year=yearly_budget.date.year category=budget_item.category__name %}'>{{budget_item.category__name}}</a></div>
+                    <div>${{budget_item.amount_total}}</div>
+                    <div>${{budget_item.spent}}</div>
+                    <div>${{budget_item.diff}}</div>
+                    <div>Edit</div>
+                    {% endfor %}
+                </div>
+                <div class="budget-horizontal-grid-monthly">
+                    <div>Spending Total</div>
+                    <div>${{total_spending_budgeted.amount}}</div>
+                    <div>${{total_spending_spent.amount}}</div>
+                    <div>${{total_spending_remaining.amount}}</div>
+                    <div></div>
+                </div>
+            </div>
+            <div>
+                <div class="rollover-col">
+                    <div class="budget-monthly-single-col card-table-header">
+                        <div class="card-table-heading">Rollover</div>
+                    </div>
+                    {% for rollover in rollovers_spending %}
+                    <div>
+                        <input class="rollover-edit" data-category="{{rollover.category}}" type="number" step="0.01" value="{{rollover.amount}}">
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-        <div class="budget-horizontal-grid-monthly">
-    {% for budget_item in budget_items%}
-            <div data-tooltip="{{budget_item.category__name}}">{{budget_item.category__name}}</div>
-            <div>${{budget_item.amount_total}}</div>
-            <div>${{budget_item.spent}}</div>
-            <div>${{budget_item.diff}}</div>
-            <div>Edit</div>
-    {% endfor %}
+        <div class="card-main">
+            <div style="flex-grow:1;">
+                <div class="budget-horizontal-grid-monthly card-table-header">
+                    <div class="card-table-heading">Category</div>
+                    <div class="card-table-heading">Budgeted</div>
+                    <div class="card-table-heading">Saved</div>
+                    <div class="card-table-heading">Remaining</div>
+                    <div></div>
+                </div>
+                <div class="budget-horizontal-grid-monthly">
+                    {% for savings_item in savings_items %}
+                    <div data-tooltip="{{savings_item.category__name}}">{{savings_item.category__name}}</div>
+                    <div>${{savings_item.amount_total}}</div>
+                    <div>${{savings_item.saved}}</div>
+                    <div>${{savings_item.diff}}</div>
+                    <div>Edit</div>
+                    {% endfor %}
+                </div>
+                <div class="budget-horizontal-grid-monthly">
+                    <div>Savings Total</div>
+                    <div>${{total_savings_budgeted.amount}}</div>
+                    <div>${{total_saved.amount}}</div>
+                    <div>${{total_savings_remaining.amount}}</div>
+                    <div></div>
+                </div>
+                <div class="budget-horizontal-grid-monthly">
+                    <div>Total</div>
+                    <div>${{total_budgeted}}</div>
+                    <div>${{total_spent}}</div>
+                    <div>${{total_remaining}}</div>
+                    <div></div>
+                </div>
+            </div>
+            <div>
+                <div class="rollover-col">
+                    <div class="budget-monthly-single-col card-table-header">
+                        <div class="card-table-heading">Rollover</div>
+                    </div>
+                    {% for rollover in rollovers_savings %}
+                    <div>
+                        <input class="rollover-edit" data-category='{{rollover.category}}' type="number" step="0.01" value="{{rollover.amount}}">
+                    </div>
+                    
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-        <div class="budget-horizontal-grid-monthly">
-            <div>Spending Total</div>
-            <div>${{total_spending_budgeted.amount}}</div>
-            <div>${{total_spending_spent.amount}}</div>
-            <div>${{total_spending_remaining.amount}}</div>
-            <div></div>
-        </div>
-        <div class="budget-horizontal-grid-monthly card-table-header">
-            <div class="card-table-heading">Category</div>
-            <div class="card-table-heading">Budgeted</div>
-            <div class="card-table-heading">Saved</div>
-            <div class="card-table-heading">Remaining</div>
-            <div></div>
-        </div>
-        <div class="budget-horizontal-grid-monthly">
-        {% for savings_item in savings_items %}
-            <div data-tooltip="{{savings_item.category__name}}">{{savings_item.category__name}}</div>
-            <div>${{savings_item.amount_total}}</div>
-            <div>${{savings_item.saved}}</div>
-            <div>${{savings_item.diff}}</div>
-            <div>Edit</div>
-        {% endfor %}
-        </div>
-        <div class="budget-horizontal-grid-monthly">
+        <!-- <div class="budget-horizontal-grid-monthly">
             <div>Savings Total</div>
             <div>${{total_savings_budgeted.amount}}</div>
             <div>${{total_saved.amount}}</div>
@@ -84,7 +132,7 @@
             <div>${{total_spent}}</div>
             <div>${{total_remaining}}</div>
             <div></div>
-        </div>
+        </div> -->
     </div>
 
     
@@ -361,4 +409,53 @@
 
     </div>
 </div> -->
+<script>
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
+    const rollovers = document.querySelectorAll(".rollover-edit");
+
+    function saveRollover(event){
+        const key = event.key;
+        if (key==="Enter" || event.type==='blur'){
+            event.preventDefault();
+            const targ= event.currentTarget.value;
+            fetch('{% url "rollover-update" %}',{
+                method: 'POST',
+                credentials: 'same-origin',
+                headers:{
+                    'Accept': 'application/json',
+                    'X-Requested-With': 'XMLHttpRequest',
+                    'X-CSRFToken': csrftoken,
+                },
+                body: JSON.stringify({'amount':targ, 'category': event.currentTarget.dataset.category, "year":'{{yearly_budget.date.year}}', })
+                })
+            }
+        }
+
+    rollovers.forEach((item) =>{
+        item.addEventListener('keydown', (event)=>{
+            const key = event.key
+            saveRollover(event)
+        })
+        item.addEventListener('blur', saveRollover)
+    })
+
+
+</script>
 {% endblock body %}
