--- a/static/css/base.css
+++ b/static/css/base.css
@@ -70,6 +70,11 @@ body{
     padding-left: 10px;
 }
 
+.purchase-horizontal-grid div{
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .income-horizontal-grid-monthly{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
