--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
     <div class="main-container">
         <div>
             <ul class="nav-list">
+                {% if user.is_authenticated %}
                 <li><a href='{% url "yearly_list" %}'>Yearly List</a></li>
                 <li><a href='{% url "monthly_budget_list" %}'>Monthly Budget List</a></li>
                 <li><a href='{% url "monthly_create" %}'>Monthly Create</a></li>
@@ -24,6 +25,11 @@
                 <li><a href='{% url "purchase_add" %}'>Purchase Add</a></li>
                 <li><a href='{% url "category_create"%}'>Category Create</a></li>
                 <li><a href='{% url "purchase_list" %}'>Purchase List</a></li>
+                <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                {% else %}
+                <li> <a href="{% url 'account_login' %}">Login</a></li>
+                <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+                {% endif %}
             </ul>
         </div>
 
