--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,19 +1,76 @@
-*{
-    font-family: 'Lato', sans-serif;
+/*
+  Josh's Custom CSS Reset - https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-body{
+* {
     margin: 0;
 }
 
-.main-container{
+html,
+body {
+    height: 100%;
+}
+
+body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+    isolation: isolate;
+}
+
+/* End of custom CSS reset */
+
+* {
+    font-family: 'Lato', sans-serif;
+}
+
+a {
+    /* text-decoration: none; */
+    color: black;
+}
+
+
+.main-container {
     display: flex;
     flex-wrap: wrap;
     min-height: 100vh;
 }
 
-.main-container > :first-child{
+.main-container> :first-child {
     flex-basis: 175px;
     flex-grow: 1;
     background-color: #74B4FF;
@@ -22,77 +79,83 @@ body{
 
 }
 
-.main-container > :last-child{
+.main-container> :last-child {
     flex-basis: 0;
     flex-grow: 999;
     min-width: 50%;
-    background-color: #FAFAFA;
+    background-color: #fdfdfd;
 }
 
-.nav-list{
+.nav-list {
     list-style-type: none;
     padding-left: 0px;
 }
 
-.nav-list > li{
+.nav-list>li {
     padding: 5px 5px 5px 0;
 }
 
-.nav-list > li > a{
+.nav-list>li>a {
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
 
-.content-container{
-    display: grid;
+.content-container {
+    /* display: grid;
     grid-template-columns: 1fr;
     place-items: center;
-    margin-left: 10px;
+    margin-left: 10px; */
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
     padding-left: 10px;
 
 }
 
-.content{
+.content {
     max-width: 1050px;
+    width: 100%
 }
 
-.summary-horizontal-grid-monthly{
+.summary-horizontal-grid-monthly {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     margin-bottom: 10px;
     padding-left: 10px;
 }
-.purchase-horizontal-grid{
+
+.purchase-horizontal-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     margin-bottom: 10px;
     padding-left: 10px;
 }
 
-.purchase-horizontal-grid div{
+.purchase-horizontal-grid div {
     white-space: nowrap;
     overflow: hidden;
 }
 
-.income-horizontal-grid-monthly{
+.income-horizontal-grid-monthly {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     margin-bottom: 10px;
     padding-left: 10px;
 }
 
-.budget-monthly-single-col{
+.budget-monthly-single-col {
     margin-bottom: 10px;
 }
 
-.yearly-detail-grid-container{
+.yearly-detail-grid-container {
     display: grid;
     grid-template-columns: 2fr 10fr;
 }
 
 
-.budget-horizontal-grid-year{
+.budget-horizontal-grid-year {
     display: grid;
     grid-template-columns: 100px 70px 80px;
     border: 1px solid black;
@@ -100,10 +163,10 @@ body{
     /* font-size: 12px; */
 }
 
-[data-tooltip]:before {            
-    position : absolute;
-    content : attr(data-tooltip);
-    opacity : 0;
+[data-tooltip]:before {
+    position: absolute;
+    content: attr(data-tooltip);
+    opacity: 0;
     display: none;
 
     transition: all 0.05s ease;
@@ -113,59 +176,60 @@ body{
     /* box-shadow: 2px 2px 1px silver;   */
 }
 
-[data-tooltip]:hover:before {    
-    display: block;    
-    opacity : 1;
+[data-tooltip]:hover:before {
+    display: block;
+    opacity: 1;
 
     background: #FFFFFF;
     /* margin-top: -2.5px; */
     /* margin-left: 20px;   */
 }
-.budget-horizontal-grid-year > div{
+
+.budget-horizontal-grid-year>div {
     white-space: nowrap;
     overflow: hidden;
 }
 
-.budget-horizontal-grid-month{
+.budget-horizontal-grid-month {
     display: grid;
     grid-template-columns: 80px 65px 80px;
     border: 1px solid black;
     /* font-size: 12px; */
     column-gap: 5px;
 }
-    
-.budget-horizontal-grid-monthly{
+
+.budget-horizontal-grid-monthly {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     margin-bottom: 10px;
     padding-left: 10px;
 }
 
-.budget-horizontal-grid-monthly > div{
+.budget-horizontal-grid-monthly>div {
     white-space: nowrap;
     overflow: hidden;
 }
 
 
-.yearly-detail-grid{
+.yearly-detail-grid {
     display: grid;
     grid-template-columns: repeat(12, 240px);
     overflow-x: auto;
 }
 
-.yearly-detail-grid-header{
+.yearly-detail-grid-header {
     display: grid;
     grid-template-columns: 150px repeat(12, 200px)
 }
 
-.purchase-form{
-    display:grid;
+.purchase-form {
+    display: grid;
     /* grid-template-columns: 1fr 1fr 1fr repeat(5, 1fr); */
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     max-width: 100%;
 }
 
-.page-header{
+.page-header {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -175,29 +239,31 @@ body{
 
 }
 
-.page-title{
+.page-title {
     margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 10px;
 }
 
-h1{
+h1 {
     font-size: 48px;
     font-weight: bold;
 }
 
-h2{
+h2 {
     margin: 0px 0px 5px 0px;
     font-size: 24px;
     margin-left: 5px;
 }
 
-.purchase-form input, .purchase-form select, .purchase-form textarea{
+.purchase-form input,
+.purchase-form select,
+.purchase-form textarea {
     width: 90%;
 }
 
 
-.card-base{
+.card-base {
     background: #FFFFFF;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
@@ -206,18 +272,18 @@ h2{
     max-width: 100%;
 }
 
-.card-header{
+.card-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.card-header-container{
+.card-header-container {
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card-header-action{
+.card-header-action {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -228,59 +294,59 @@ h2{
     border-radius: 10px;
 }
 
-.card-header-action > a{
+.card-header-action>a {
     color: white;
     text-decoration: none;
 
 }
 
-.card-main{
+.card-main {
     display: flex;
 }
 
-.card-container-horz{
+.card-container-horz {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.card-container-horz > :first-child{
+.card-container-horz> :first-child {
     margin-right: 20px;
 }
 
-.card-table-header{
+.card-table-header {
     background-color: #F1F1F1;
     border-radius: 7px;
     padding: 5px;
 }
 
-.card-table-heading{
+.card-table-heading {
     font-size: 18px;
     font-weight: 600;
     margin: 5px 5px 5px 5px;
 }
 
-.return-link{
+.return-link {
     text-decoration: none;
     color: black;
     margin-left: 10px;
     font-weight: bold;
 }
 
-.budget-subtotal{
+.budget-subtotal {
     background-color: #c9d2fa;
     border-radius: 7px;
     padding: 5px;
 }
 
-.card-table-subtotal{
+.card-table-subtotal {
     font-size: 16px;
     font-weight: 600;
     margin: 2px 5px 2px 5px;
 }
 
-.rollover-edit{
+.rollover-edit {
     width: 75px;
     padding: 0px;
     border: none;
